--- a/recipes/templates/recipes/partials/recipe.html
+++ b/recipes/templates/recipes/partials/recipe.html
@@ -1,9 +1,11 @@
 <div class="recipe recipe-list-item">
+    
     <div class="recipe-cover">
+        {% if recipe.cover %}
         <a href="{% url 'recipes:recipe' recipe.id %}">
             <img src="{{ recipe.cover.url }}" alt="Temporário">
         </a>
-        
+        {% endif %}
         <div class="recipe-title-container">
             <h2 class="recipe-title">
                 <a href="{% url 'recipes:recipe' recipe.id %}">
