--- a/recipes/templates/recipes/partials/recipe.html
+++ b/recipes/templates/recipes/partials/recipe.html
@@ -2,13 +2,15 @@
     
     <div class="recipe-cover">
         {% if recipe.cover %}
-        <a href="{% url 'recipes:recipe' recipe.id %}">
-            <img src="{{ recipe.cover.url }}" alt="Temporário">
-        </a>
+            <div class="recipe-cover">
+                <a href="{{ recipe.get_absolute_url }}">
+                    <img src="{{ recipe.cover.url }}" alt="Temporário">
+                </a>
+            </div>
         {% endif %}
         <div class="recipe-title-container">
             <h2 class="recipe-title">
-                <a href="{% url 'recipes:recipe' recipe.id %}">
+                <a href="{{ recipe.get_absolute_url }}">
                     {{ recipe.title }}
                 </a>
             </h2>
